objects/CSS_WS_Warranty_Parts__c.object
<CustomObject>
    <description>Object to store related parts registered on a Warranty</description>
    <fields>
        <fullName>CSS_WS_Description__c</fullName>
        <description>The part description will auto-populate based on the part number and will be non editable. </description>
        <label>Description</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_EPR_Attention__c</fullName>
        <label>EPR Attention</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_EPR_Note__c</fullName>
        <label>EPR Note</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSS_WS_From_Campaign__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A flag to know if the part was retrieved from a campaign</description>
        <label>From campaign?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSS_WS_From_promotion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>From promotion?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Kit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be populated with a flag of whether the part number is kit or not. </description>
        <label>Kit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Long_Part_Number_del__c</fullName>
        <description>Siebel Long Part Number to send in Claim Submission</description>
        <label>Long Part Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_PartNumber__c</fullName>
        <description>This field will be editable for part number to be entered for the claim. Validation of the part number will take place. If the part number is valid, then it will be added to the claim, else,  the user will be asked to enter correct part number. </description>
        <label>Part Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_PartService__c</fullName>
        <description>The part number will be entered manually by the user and then it will call Siebel to validate whether it is valid part number or not (it will be set as green tick else, there will be red cross). If this is not valid the user won&apos;t be able to submit the claim.    </description>
        <label>Part in Service</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Part_Product_Code__c</fullName>
        <label>CSS WS Part Product Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Part_Return_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Part Return Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Quantity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_ReplacementReasonPicklist__c</fullName>
        <label>Replacement Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Root Cause</fullName>
                </value>
                <value>
                    <fullName>Service Publication</fullName>
                </value>
                <value>
                    <fullName>Campaign-TRP-ATC</fullName>
                </value>
                <value>
                    <fullName>Damaged Upon Removal</fullName>
                </value>
                <value>
                    <fullName>Progressive Damage</fullName>
                </value>
                <value>
                    <fullName>Contaminated From Failure</fullName>
                    <isActive>false</isActive>
                    <label>Contaminated From Failure</label>
                </value>
                <value>
                    <fullName>Damaged During Removal</fullName>
                    <isActive>false</isActive>
                    <label>Damaged During Removal</label>
                </value>
                <value>
                    <fullName>One-Time Use</fullName>
                    <isActive>false</isActive>
                    <label>One-Time Use</label>
                </value>
                <value>
                    <fullName>Service Procedure Requirement</fullName>
                    <isActive>false</isActive>
                    <label>Service Procedure Requirement</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSS_WS_ReplacementReason__c</fullName>
        <description>Values will be provided so we can save the list in Sales Force. </description>
        <label>Replacement Reason</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Row_Number__c</fullName>
        <description>This will be a consecutive number of the line of parts added. </description>
        <label>Row Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Shipping_Company__c</fullName>
        <label>Shipping Company</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Siebel_SubTotal__c</fullName>
        <label>Siebel_SubTotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Siebel_Unit_Part_Price__c</fullName>
        <label>Siebel Unit Part Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CSS_WS_SubTotal__c</fullName>
        <description>This field value will be multiplication of Unit Part Price and Qty</description>
        <label>SubTotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Superseaded__c</fullName>
        <description>This field will pull the superseaded value for the part number that was entered by the user. (Check whether this value is needed or not) </description>
        <label>Superseaded</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Tracking_Guide_Code__c</fullName>
        <label>Tracking Guide Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Unit_Part_Price__c</fullName>
        <description>The Unit Part Price will auto-populate based on the part number and will be non editable. It will be displayed in USD. (Based on Price List from Corporate list) (To get this value, it is necessary to send Pricing region, channel code, goms instance and failure date). This will be displayed only for Warranty admins from Planta. (It is needed to pull the promotion prices that Monica Jared uses in Oracle, needs to be defined)</description>
        <label>Unitary Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Waiver_Process__c</fullName>
        <label>Waiver Process</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_WarrantyID__c</fullName>
        <description>master related ID</description>
        <label>Warranty</label>
        <referenceTo>CSS_WS_Warranty__c</referenceTo>
        <relationshipName>CSS_WS_Warranty_Parts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CSS_WS_priceBook__c</fullName>
        <description>ODM Price Book</description>
        <label>CSS_WS_priceBook</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Percentage__c</fullName>
        <label>Part %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>CSS WS Warranty Part</label>
    <nameField>
        <label>SF Part ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CSS WS Warranty Parts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Quantityhigher25</fullName>
        <active>false</active>
        <description>Quantity &gt; 25 requires Warning and validate suggestion</description>
        <errorConditionFormula>IF( CSS_WS_Quantity__c &gt; 25, true, false)</errorConditionFormula>
        <errorDisplayField>CSS_WS_Quantity__c</errorDisplayField>
        <errorMessage>Quantity exceeds 25. Please verify this value.</errorMessage>
    </validationRules>
</CustomObject>